--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,11 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 before_script:
-  - npm install -g angular-cli
+  - npm install -g @angular/cli@latest
   - npm install -g karma
   - npm install
 
 script: ng build -prod
+
+notifications:
+  slack: 
